[package]
authors = ["Christian Meissl <meissl.christian@gmail.com>"]
description = "Pixman is a low-level software library for pixel manipulation, providing features such as image compositing and trapezoid rasterization."
edition = "2021"
license = "MIT"
name = "pixman-sys"
rust-version = "1.65.0"
version = "0.1.0"

[dependencies]

[build-dependencies]
bindgen = "0.68"
pkg-config = "0.3"