[package]
authors = ["Christian Meissl <meissl.christian@gmail.com>"]
description = "Pixman is a low-level software library for pixel manipulation, providing features such as image compositing and trapezoid rasterization."
edition = "2021"
license = "MIT"
name = "pixman"
rust-version = "1.65.0"
version = "0.1.0"

[dependencies]
drm-fourcc = {version = "2.2.0", optional = true}
pixman-sys = {version = "0.1.0", path = "../pixman-sys"}

[dev-dependencies]
image = "0.24.7"

[features]
default = []
drm-fourcc = ["dep:drm-fourcc"]
